--- a/index.html
+++ b/index.html
@@ -37,8 +37,29 @@
 		</nav>
 	</header>
 	<article>
-		<p></p>
-		<p></p>
+		<p>
+			Normal text
+		</p>
+		<p>
+			<strong>
+				Used for warnings
+			</strong>
+		</p>
+		<p>
+			<b>
+				For headers
+			</b>
+		</p>
+		<p>
+			<em>
+				Used for emphasis
+			</em>
+		</p>
+		<p>
+			<i>
+				Just italic
+			</i>
+		</p>
 		<figure>
 			
 		</figure>
