--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title> 
 	Assignment 3.2 | Inholland
 	</title>
-
+	
+	<link rel="icon" href="img/shulker/png)" sizes="16x16" type="image/png">
 </head>
 
 <body>
