image + video width and height from html to css
I changed the attributes of all videos and images and removed the width and height and put it in my css because we were supposed to do that.

--- a/bestdestinations.html
+++ b/bestdestinations.html
@@ -20,7 +20,7 @@
 
 <body id="bestdestinations-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo" width="50" height="25">
+		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -95,7 +95,7 @@
 				<p class="traffic-text">Click the image to learn more about Paris</p>
 			</figcaption>
 			<a href="https://www.corendon.nl/" target="_blank">
-				<img src="img/paris_image.jpg" alt="Paris, France, Destination 2, John Towner" title="Click to learn more about Paris" width="330" height="220">
+				<img id="paris-image" src="img/paris_image.jpg" alt="Paris, France, Destination 2, John Towner" title="Click to learn more about Paris">
 			</a>
 			<footer class="copyright_text">&copy John Towner | Used by Sem Plaatsman</footer>
 		</article>
@@ -105,7 +105,7 @@
 				<p class="traffic-text">Click the image to learn more about Tokyo</p>
 			</figcaption>
 			<a href="https://www.corendon.nl/" target="_blank">
-				<img src="img/tokyo_image.jpg" alt="Tokyo, Japan, Destination 4, Alex Knight" title="Click to learn more about Tokyo" width="330" height="220">
+				<img id="tokyo-image" src="img/tokyo_image.jpg" alt="Tokyo, Japan, Destination 4, Alex Knight" title="Click to learn more about Tokyo">
 			</a>
 			<footer class="copyright_text">&copy Alex Knight | Used by Sem Plaatsman</footer>
 		</article>
@@ -115,7 +115,7 @@
 				<p class="traffic-text">Click the image to learn more about Rio de Janeiro</p>
 			</figcaption>
 			<a href="https://www.corendon.nl/" target="_blank">
-				<img src="img/rio_image.jpg" alt="Rio de Janeiro, Brazil, Destination 6, Agustin Diaz Gargiulo" title="Click to learn more about Rio de Janeiro" width="330" height="220">
+				<img id="rio-image" src="img/rio_image.jpg" alt="Rio de Janeiro, Brazil, Destination 6, Agustin Diaz Gargiulo" title="Click to learn more about Rio de Janeiro">
 			</a>
 			<footer class="copyright_text">&copy Agustin Diaz Gargiulo | Used by Sem Plaatsman</footer>
 		</article>
