--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body id="index-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo" width="50" height="25">
+		<img src="img/logo_image.jpg" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -46,7 +46,7 @@
 		</ol>
 	</aside>
 	
-	<video width="256" height="144" autoplay muted loop>
+	<video id="travel-video" autoplay muted loop>
 		<source src="mp4/index_video.mp4" type="video/mp4" >
 		<source src="ogg/index_video.ogg" type="video/ogg" >
 	</video>
@@ -58,7 +58,7 @@
 			</header>
 			<main class="article-main">
 				<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank" class="article-link">
-					<img id="dalyan-image" src="img/dalyan_image.jpg" alt="Dalyan, Turkey, Ray Harrington" title="Click to learn more about Dalyan" width="480" height="301	">
+					<img id="dalyan-image" src="img/dalyan_image.jpg" alt="Dalyan, Turkey, Ray Harrington" title="Click to learn more about Dalyan">
 				</a>
 				<p>Dalyan is a small peaceful fishing village in the province Muğla. It's located in between Marmaris and Fethiye near the south-west coast of Turkey. 
 				There are a lot of beautiful beaches to visit like the Iztuzu beach (also a breeding ground for the loggerhead sea turtle), Dalyanağzı beach, Aşı beach and Ekincik Beach. 
@@ -76,7 +76,7 @@
 			</header>
 			<main class="article-main">
 				<a href="https://www.corendon.nl/turkije/istanbul" target="_blank" class="article-link">
-					<img src="img/istanbul_image.jpg" alt="Istanbul, Turkey, Anna Berdnik" title="Click to learn more about Istanbul" width="480" height="320">
+					<img id="istanbul-image" src="img/istanbul_image.jpg" alt="Istanbul, Turkey, Anna Berdnik" title="Click to learn more about Istanbul">
 				</a>
 				<p>Istanbul has it all: over 2500 years of history, culture, and traditions, amazing landmarks, vibrant nightlife, and breathtaking views. 
 				This transcontinental metropolis is a fast-paced cultural melting pot you can’t afford to miss. 
@@ -96,7 +96,7 @@
 			</header>
 			<main class="article-main">
 				<a href="https://www.corendon.nl/griekenland/kreta" target="_blank" class="article-link">
-					<img src="img/crete_image.jpg" alt="Crete, Greece, Evangelos Mpikakis" title="Click to learn more about Crete" width="480" height="270">
+					<img id="crete-image" src="img/crete_image.jpg" alt="Crete, Greece, Evangelos Mpikakis" title="Click to learn more about Crete">
 				</a>
 				<p>The majestic and mythical Crete is Greek’s largest island, situated on the southern side of the Aegean Sea. 
 				With over 600 miles of coastline to play with, there is no shortage of beautiful beaches and scenic views. 
