--- a/tickets.html
+++ b/tickets.html
@@ -20,7 +20,7 @@
 
 <body id="tickets-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo" width="50" height="25">
+		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -173,19 +173,19 @@
 				<p class="traffic-text">Click one of the images below to learn more</p>
 			</figcaption>
 			<a href="https://www.corendon.nl/turkije/turkse-riviera/alanya" target="_blank">
-				<img src="img/alanya_image.jpg" alt="Alanya, Turkey, Dragana Novoselska" title="Alanya" width="240" height="160">
+				<img id="alanya-image" src="img/alanya_image.jpg" alt="Alanya, Turkey, Dragana Novoselska" title="Alanya">
 			</a>
 			<footer class="copyright_text">&copy Dragana Novoselska | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product2">
 			<a href="https://www.corendon.nl/turkije/egeische-kust/marmaris" target="_blank">
-				<img src="img/marmaris_image.jpg" alt="Marmaris, Turkey, Feyza Dogan" title="Marmaris" width="240" height="180">
+				<img id="marmaris-image" src="img/marmaris_image.jpg" alt="Marmaris, Turkey, Feyza Dogan" title="Marmaris">
 			</a>
 			<footer class="copyright_text">&copy Feyza Dogan | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product3">
 			<a href="https://www.corendon.nl/spanje/balearen/mallorca" target="_blank">
-				<img src="img/mallorca_image.jpg" alt="Mallorca, Spain, Daniel Frank" title="Click to learn about Mallorca" width="240" height="160">
+				<img id="mallorca-image" src="img/mallorca_image.jpg" alt="Mallorca, Spain, Daniel Frank" title="Click to learn about Mallorca">
 			</a>
 			<footer class="copyright_text">&copy Daniel Frank | Used by Sem Plaatsman</footer>
 		</article>
