--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <body id="contact-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo" width="50" height="25">
+		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -64,19 +64,19 @@
 				<p class="traffic-text">Click one of the images below to learn more</p>
 			</figcaption>
 			<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank">
-				<img src="img/dalyan2_image.jpg" alt="Dalyan, Turkey, Mert Kahveci" title="Click to learn more about Dalyan" width="300" height="200">
+				<img id="dalyan2-image" src="img/dalyan2_image.jpg" alt="Dalyan, Turkey, Mert Kahveci" title="Click to learn more about Dalyan">
 			</a>
 			<footer class="copyright_text">&copy Mert Kahveci | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="contact-product2">
 			<a href="https://www.corendon.nl/spanje/canarische-eilanden/tenerife" target="_blank">
-				<img src="img/tenerife_image.jpg" alt="Tenerife, Spain, Mihály Köles" title="Click to learn more about Tenerife" width="300" height="190">
+				<img id="tenerife-image" src="img/tenerife_image.jpg" alt="Tenerife, Spain, Mihály Köles" title="Click to learn more about Tenerife">
 			</a>
 			<footer class="copyright_text">&copy Mihály Köles | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="contact-product3">
 			<a href="https://www.corendon.nl/griekenland/rhodos" target="_blank">
-				<img src="img/rhodes_image.jpg" alt="Mallorca, Fabian Schneidereit" title="Click to learn more about Rhodes" width="300" height="200">
+				<img id="rhodes-image" src="img/rhodes_image.jpg" alt="Mallorca, Fabian Schneidereit" title="Click to learn more about Rhodes">
 			</a>
 			<footer class="copyright_text">&copy Fabian Schneidereit | Used by Sem Plaatsman</footer>
 		</article>
