Align images to grid
I've aligned the images so they match the other articles in grid.

--- a/bestdestinations.html
+++ b/bestdestinations.html
@@ -94,7 +94,7 @@
 				<h4 class="traffic-text" >Destination 2: Paris, France</h4>
 				<p class="traffic-text">Click the image to learn more about Paris</p>
 			</figcaption>
-			<a href="https://www.corendon.nl/" target="_blank">
+			<a href="https://www.corendon.nl/" id="paris-link" target="_blank">
 				<img id="paris-image" src="img/paris_image.jpg" alt="Paris, France, Destination 2, John Towner" title="Click to learn more about Paris">
 			</a>
 			<footer class="copyright_text">&copy John Towner | Used by Sem Plaatsman</footer>
@@ -104,7 +104,7 @@
 				<h4 class="traffic-text" >Destination 4: Tokyo, Japan</h4>
 				<p class="traffic-text">Click the image to learn more about Tokyo</p>
 			</figcaption>
-			<a href="https://www.corendon.nl/" target="_blank">
+			<a href="https://www.corendon.nl/" id="tokyo-link" target="_blank">
 				<img id="tokyo-image" src="img/tokyo_image.jpg" alt="Tokyo, Japan, Destination 4, Alex Knight" title="Click to learn more about Tokyo">
 			</a>
 			<footer class="copyright_text">&copy Alex Knight | Used by Sem Plaatsman</footer>
@@ -114,7 +114,7 @@
 				<h4 class="traffic-text" >Destination 6: Rio de Janeiro, Brazil</h4>
 				<p class="traffic-text">Click the image to learn more about Rio de Janeiro</p>
 			</figcaption>
-			<a href="https://www.corendon.nl/" target="_blank">
+			<a href="https://www.corendon.nl/" id="rio-link" target="_blank">
 				<img id="rio-image" src="img/rio_image.jpg" alt="Rio de Janeiro, Brazil, Destination 6, Agustin Diaz Gargiulo" title="Click to learn more about Rio de Janeiro">
 			</a>
 			<footer class="copyright_text">&copy Agustin Diaz Gargiulo | Used by Sem Plaatsman</footer>
