--- a/tickets.html
+++ b/tickets.html
@@ -172,19 +172,19 @@
 			<figcaption class="traffic-images">
 				<p class="traffic-text">Click one of the images below to learn more</p>
 			</figcaption>
-			<a href="https://www.corendon.nl/turkije/turkse-riviera/alanya" target="_blank">
+			<a href="https://www.corendon.nl/turkije/turkse-riviera/alanya" id="alanya-link" target="_blank">
 				<img id="alanya-image" src="img/alanya_image.jpg" alt="Alanya, Turkey, Dragana Novoselska" title="Alanya">
 			</a>
 			<footer class="copyright_text">&copy Dragana Novoselska | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product2">
-			<a href="https://www.corendon.nl/turkije/egeische-kust/marmaris" target="_blank">
+			<a href="https://www.corendon.nl/turkije/egeische-kust/marmaris" id="marmaris-link" target="_blank">
 				<img id="marmaris-image" src="img/marmaris_image.jpg" alt="Marmaris, Turkey, Feyza Dogan" title="Marmaris">
 			</a>
 			<footer class="copyright_text">&copy Feyza Dogan | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product3">
-			<a href="https://www.corendon.nl/spanje/balearen/mallorca" target="_blank">
+			<a href="https://www.corendon.nl/spanje/balearen/mallorca" id="mallorca-link" target="_blank">
 				<img id="mallorca-image" src="img/mallorca_image.jpg" alt="Mallorca, Spain, Daniel Frank" title="Click to learn about Mallorca">
 			</a>
 			<footer class="copyright_text">&copy Daniel Frank | Used by Sem Plaatsman</footer>
