--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head lang="en">
+<head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Hello and welcome to my website. My name is Sem Plaatsman and I made this website for an assignment from Hogeschool Inholland Haarlem. 
 	My teacher is Frank Dersjant, I am in the class Inf1C and my student number is 688208. This website gave me a lot of stress but I finally got there. 
@@ -46,78 +47,77 @@
 		</ol>
 	</aside>
 	
-	<video id="travel-video" autoplay muted loop>
-		<source src="mp4/index_video.mp4" type="video/mp4" >
-		<source src="ogg/index_video.ogg" type="video/ogg" >
-	</video>
+	<figure>
+		<video id="travel-video" autoplay muted loop>
+			<source src="mp4/index_video.mp4" type="video/mp4" >
+			<source src="ogg/index_video.ogg" type="video/ogg" >
+		</video>
+		<figcaption>
+			Promotion movie
+		</figcaption>
+	</figure>
 	
 	<section id="index-articles">
 		<article id="dalyan-article">
 			<header>
-				<h1>Dalyan, Turkey</h1>
+				<h2>Dalyan, Turkey</h2>
 			</header>
-			<main class="article-main">
+			<p class="article-main">
 				<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank" class="article-link">
 					<img id="dalyan-image" src="img/dalyan_image.jpg" alt="Dalyan, Turkey, Ray Harrington" title="Click to learn more about Dalyan">
 				</a>
-				<p>Dalyan is a small peaceful fishing village in the province Muğla. It's located in between Marmaris and Fethiye near the south-west coast of Turkey. 
+				<span>Dalyan is a small peaceful fishing village in the province Muğla. It's located in between Marmaris and Fethiye near the south-west coast of Turkey. 
 				There are a lot of beautiful beaches to visit like the Iztuzu beach (also a breeding ground for the loggerhead sea turtle), Dalyanağzı beach, Aşı beach and Ekincik Beach. 
-				The Lycian tombs that we're cut out of rock on the side of a cliff (also shown on the picture) is one of the most famous sights in Dalyan and definitely worth visiting.</p>
-			</main>
-			<footer>
-				<footer class="copyright_text">&copy Ray Harrington | Used by Sem Plaatsman</footer> 
-				<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank">More info</a>
-			</footer>
+				The Lycian tombs that we're cut out of rock on the side of a cliff (also shown on the picture) is one of the most famous sights in Dalyan and definitely worth visiting.</span>
+			</p>
+			<footer class="copyright_text">&copy; Ray Harrington | Used by Sem Plaatsman</footer> 
+			<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank">More info</a>
 		</article>
 		
 		<article id="istanbul-article">
 			<header>
-				<h1>Istanbul, Turkey</h1>
+				<h2>Istanbul, Turkey</h2>
 			</header>
-			<main class="article-main">
+			<p class="article-main">
 				<a href="https://www.corendon.nl/turkije/istanbul" target="_blank" class="article-link">
 					<img id="istanbul-image" src="img/istanbul_image.jpg" alt="Istanbul, Turkey, Anna Berdnik" title="Click to learn more about Istanbul">
 				</a>
-				<p>Istanbul has it all: over 2500 years of history, culture, and traditions, amazing landmarks, vibrant nightlife, and breathtaking views. 
+				<span>Istanbul has it all: over 2500 years of history, culture, and traditions, amazing landmarks, vibrant nightlife, and breathtaking views. 
 				This transcontinental metropolis is a fast-paced cultural melting pot you can’t afford to miss. 
 				Rome and Istanbul are both over two-and-a-half millennia old, but for the majority of the time Istanbul was larger, more influential, and wealthier than Rome.
 				Istanbul has been the capital of four empires: the Roman Empire, the Byzantine Empire, the Latin Empire, the Byzantine Empire and the Ottoman Empire. 
-				Istanbul’s history is very rich, and remains of each of these empires can still be witnessed.</p>
-			</main>
-			<footer>
-				<footer class="copyright_text">&copy Anna Berdnik | Used by Sem Plaatsman</footer>
-				<a href="https://www.corendon.nl/turkije/istanbul" target="_blank">More info</a>
-			</footer>
+				Istanbul’s history is very rich, and remains of each of these empires can still be witnessed.</span>
+			</p>
+			<footer class="copyright_text">&copy; Anna Berdnik | Used by Sem Plaatsman</footer>
+			<a href="https://www.corendon.nl/turkije/istanbul" target="_blank">More info</a>
 		</article>
 		
 		<article id="crete-article">
 			<header>
-				<h1>Crete, Greece</h1>
+				<h2>Crete, Greece</h2>
 			</header>
-			<main class="article-main">
+			<p class="article-main">
 				<a href="https://www.corendon.nl/griekenland/kreta" target="_blank" class="article-link">
 					<img id="crete-image" src="img/crete_image.jpg" alt="Crete, Greece, Evangelos Mpikakis" title="Click to learn more about Crete">
 				</a>
-				<p>The majestic and mythical Crete is Greek’s largest island, situated on the southern side of the Aegean Sea. 
+				<span>The majestic and mythical Crete is Greek’s largest island, situated on the southern side of the Aegean Sea. 
 				With over 600 miles of coastline to play with, there is no shortage of beautiful beaches and scenic views. 
 				Home to ancient treasures, vibrant towns and sleepy villages, a holiday to Crete offers a taste of true Mediterranean life and a wealth of places to explore.
 				Its wild natural beauty is one of the many reasons people gravitate here. 
-				One of the most notable landmarks are the famous snow topped White Mountains – or Lefka Ori – in western Crete.</p>
-			</main>
-			<footer>
-				<footer class="copyright_text">&copy Evangelos Mpikakis | Used by Sem Plaatsman</footer> 
-				<a href="https://www.corendon.nl/griekenland/kreta" target="_blank">More info</a>
-			</footer>
+				One of the most notable landmarks are the famous snow topped White Mountains – or Lefka Ori – in western Crete.</span>
+			</p>
+			<footer class="copyright_text">&copy; Evangelos Mpikakis | Used by Sem Plaatsman</footer> 
+			<a href="https://www.corendon.nl/griekenland/kreta" target="_blank">More info</a>
 		</article>
 	</section>
 	
-	<p id="author-info">&copy 2021 Sem Plaatsman</p>
+	<p id="author-info">&copy; 2021 Sem Plaatsman</p>
 	
-	<section class="cookie_statement">
+	<article class="cookie_statement">
 		<p>
 			Cookie statement
 		</p>
-	</section>
+	</article>
 </body>
 
 </html>
