--- a/tickets.html
+++ b/tickets.html
@@ -20,7 +20,7 @@
 
 <body id="tickets-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
+		<img src="img/logo_image.jpg" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -165,33 +165,33 @@
 			<td>Gorgona Studios: &euro;403,-</td>
 		</tr>
 	</table>
-	<footer id="copyright-table">Source of data &copy 2021 Corendon.nl</footer>
+	<footer id="copyright-table">Source of data &copy; 2021 Corendon.nl</footer>
 	
 	<aside id="tickets-products">
 		<article id="table-product1">
-			<figcaption class="traffic-images">
+			<header class="traffic-images">
 				<p class="traffic-text">Click one of the images below to learn more</p>
-			</figcaption>
+			</header>
 			<a href="https://www.corendon.nl/turkije/turkse-riviera/alanya" id="alanya-link" target="_blank">
 				<img id="alanya-image" src="img/alanya_image.jpg" alt="Alanya, Turkey, Dragana Novoselska" title="Alanya">
 			</a>
-			<footer class="copyright_text">&copy Dragana Novoselska | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Dragana Novoselska | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product2">
 			<a href="https://www.corendon.nl/turkije/egeische-kust/marmaris" id="marmaris-link" target="_blank">
 				<img id="marmaris-image" src="img/marmaris_image.jpg" alt="Marmaris, Turkey, Feyza Dogan" title="Marmaris">
 			</a>
-			<footer class="copyright_text">&copy Feyza Dogan | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Feyza Dogan | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="table-product3">
 			<a href="https://www.corendon.nl/spanje/balearen/mallorca" id="mallorca-link" target="_blank">
 				<img id="mallorca-image" src="img/mallorca_image.jpg" alt="Mallorca, Spain, Daniel Frank" title="Click to learn about Mallorca">
 			</a>
-			<footer class="copyright_text">&copy Daniel Frank | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Daniel Frank | Used by Sem Plaatsman</footer>
 		</article>
 	</aside>
 	
-	<p id="author-info">&copy 2021 Sem Plaatsman</p>
+	<p id="author-info">&copy; 2021 Sem Plaatsman</p>
 	
 	<section class="cookie_statement">
 		<p>
