--- a/bestdestinations.html
+++ b/bestdestinations.html
@@ -20,7 +20,7 @@
 
 <body id="bestdestinations-body">
 	<figure id="logo">
-		<img src="img/logo_image.jpg" id="logo" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
+		<img src="img/logo_image.jpg" alt="Logo, C&D, Corendon, Sem Plaatsman" title="Logo">
 	</figure>
 	<h1 id="title">Corendon</h1>
 	<h2 id="payoff">Altijd scherp!</h2>
@@ -90,38 +90,38 @@
 	
 	<aside id="bestdestinations-products">
 		<article id="product1">
-			<figcaption class="traffic-images">
+			<header class="traffic-images">
 				<h4 class="traffic-text" >Destination 2: Paris, France</h4>
 				<p class="traffic-text">Click the image to learn more about Paris</p>
-			</figcaption>
+			</header>
 			<a href="https://www.corendon.nl/" id="paris-link" target="_blank">
 				<img id="paris-image" src="img/paris_image.jpg" alt="Paris, France, Destination 2, John Towner" title="Click to learn more about Paris">
 			</a>
-			<footer class="copyright_text">&copy John Towner | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; John Towner | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="product2">
-			<figcaption class="traffic-images">
+			<header class="traffic-images">
 				<h4 class="traffic-text" >Destination 4: Tokyo, Japan</h4>
 				<p class="traffic-text">Click the image to learn more about Tokyo</p>
-			</figcaption>
+			</header>
 			<a href="https://www.corendon.nl/" id="tokyo-link" target="_blank">
 				<img id="tokyo-image" src="img/tokyo_image.jpg" alt="Tokyo, Japan, Destination 4, Alex Knight" title="Click to learn more about Tokyo">
 			</a>
-			<footer class="copyright_text">&copy Alex Knight | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Alex Knight | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="product3">
-			<figcaption class="traffic-images">
+			<header class="traffic-images">
 				<h4 class="traffic-text" >Destination 6: Rio de Janeiro, Brazil</h4>
 				<p class="traffic-text">Click the image to learn more about Rio de Janeiro</p>
-			</figcaption>
+			</header>
 			<a href="https://www.corendon.nl/" id="rio-link" target="_blank">
 				<img id="rio-image" src="img/rio_image.jpg" alt="Rio de Janeiro, Brazil, Destination 6, Agustin Diaz Gargiulo" title="Click to learn more about Rio de Janeiro">
 			</a>
-			<footer class="copyright_text">&copy Agustin Diaz Gargiulo | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Agustin Diaz Gargiulo | Used by Sem Plaatsman</footer>
 		</article>
 	</aside>
 	
-	<p id="author-info">&copy 2021 Sem Plaatsman</p>
+	<p id="author-info">&copy; 2021 Sem Plaatsman</p>
 	
 	<section class="cookie_statement">
 		<p>
