small changes for html validator
some more small changes to satisfy the html validator

--- a/contact.html
+++ b/contact.html
@@ -66,23 +66,23 @@
 			<a href="https://www.corendon.nl/turkije/egeische-kust/dalyan" target="_blank">
 				<img id="dalyan2-image" src="img/dalyan2_image.jpg" alt="Dalyan, Turkey, Mert Kahveci" title="Click to learn more about Dalyan">
 			</a>
-			<footer class="copyright_text">&copy Mert Kahveci | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Mert Kahveci | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="contact-product2">
 			<a href="https://www.corendon.nl/spanje/canarische-eilanden/tenerife" target="_blank">
 				<img id="tenerife-image" src="img/tenerife_image.jpg" alt="Tenerife, Spain, Mihály Köles" title="Click to learn more about Tenerife">
 			</a>
-			<footer class="copyright_text">&copy Mihály Köles | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Mihály Köles | Used by Sem Plaatsman</footer>
 		</article>
 		<article id="contact-product3">
 			<a href="https://www.corendon.nl/griekenland/rhodos" target="_blank">
 				<img id="rhodes-image" src="img/rhodes_image.jpg" alt="Mallorca, Fabian Schneidereit" title="Click to learn more about Rhodes">
 			</a>
-			<footer class="copyright_text">&copy Fabian Schneidereit | Used by Sem Plaatsman</footer>
+			<footer class="copyright_text">&copy; Fabian Schneidereit | Used by Sem Plaatsman</footer>
 		</article>
 	</aside>
 	
-	<p id="author-info">&copy 2021 Sem Plaatsman</p>
+	<p id="author-info">&copy; 2021 Sem Plaatsman</p>
 	
 	<section class="cookie_statement">
 		<p>
