Final bug fixes
I got rid of all errors in the html validator

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 				<input id="phone-label" type="tel" placeholder="Enter your phone number here" name="phonenumber" value="phonenumber">
 	
 				<label>Message &ast;</label>
-				<input id="message-label" type="text" placeholder="Enter your message here (required)" name="message" value="message" required></input>
+				<input id="message-label" type="text" placeholder="Enter your message here (required)" name="message" value="message" required>
 	
 				<input id="send-button" type="submit" value="submit">
 		</fieldset>
