--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head lang="en">
+<head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Hello and welcome to my website. My name is Sem Plaatsman and I made this website for an assignment from Hogeschool Inholland Haarlem. 
 	My teacher is Frank Dersjant, I am in the class Inf1C and my student number is 688208. This website gave me a lot of stress but I finally got there. 
