--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<source src="mp4/index_video.mp4" type="video/mp4" >
 			<source src="ogg/index_video.ogg" type="video/ogg" >
 		</video>
-		<figcaption>
+		<figcaption id="promotion-movie">
 			Promotion movie
 		</figcaption>
 	</figure>
